# runsmc

./: .gitignore  README.md  requirements.txt  setup.cfg  v_hudson.py
runsmc/: fenwick.py  likapprox.py  likbit.py  likelihoods.py  liknb.py  likslice.py  likstepwise.py
runsmc/legacy/: likdescending.py  likelihoods.py
tests/: conftest.py  test_algorithms.py  test_likapprox.py  test_likelihood.py  test_likstepwise.py
