[metadata]
name = runsmc
version = 0.0.1
license = GNU GPLv3+ 
author = Gertjan Bisschop
author_email = gertjanbisschop@gmail.com
description = Computing likelihoods under smc for inferred ARGs
url = https://github.com/GertjanBisschop/runsmc

classifiers = 
    Programming Language :: Python :: 3

[options]
packages = runsmc
python_requires = >=3.8
install_requires = 
    numba
    numpy
    tskit

[options.extras_require]
tests = 
    pytest
    msprime>=1.2.1.dev51+g52abee1e

[tool:pytest]
testpaths = 
    tests